Ajuste no nome da imagenm

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/Consulta.com.svg" width="300" height="32" alt="Bikcraft">
+        <img src="./img/Consulta.com.svg" width="300" height="32" alt="Consulta">
       </a>
 
       <nav aria-label="primaria">
@@ -40,7 +40,7 @@
       </div>
       <picture data-anime="800" class="fadeInDown">
         <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
-        <img src="./img/fotos/img-intro-peq.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+        <img src="./img/fotos/img-intro-peq.jpg" width="1280" height="1600" alt="Mulher mexendo no celular.">
       </picture>
     </div>
   </main>
